[package]
name = "gitstatus"
version = "0.1.0"
edition = "2021"
description = "omz gitstatus.py script made in rust (and blazing fast, ofc)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.5"

[profile.release]
opt-level = 3
strip = "symbols"
lto = "thin"
